tests/ui/resolve/issue-90113.stderr
error[E0531]: cannot find tuple struct or tuple variant `Cons` in this scope
  --> $DIR/issue-90113.rs:17:9
   |
LL |         Cons(..) => {}
   |         ^^^^ not found in this scope
   |
help: consider importing this tuple variant
   |
LL | use list::List::Cons;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0531`.
